File Upload Again

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -127,7 +127,7 @@
                                 <b>
                                     <%= listing.title %>
                                 </b> <br>
-                                &#8377;<%= listing.price.toLocaleString("en-in") %> / Night   <i class="tax-rate">&nbsp; &nbsp; + 18% GST</i> <br>
+                                &#8377;<%= listing.price %> / Night   <i class="tax-rate">&nbsp; &nbsp; + 18% GST</i> <br>
                             </p>
                         </div>
                     </div>
