--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -21,7 +21,7 @@
                             </i>
                         </p>
                         <%= listing.description %> <br>
-                            &#8377;<%= listing.price.toLocaleString("en-in")%> / Night <br>
+                            &#8377;<%= listing.price %> / Night <br>
                                 <%= listing.location %> <br>
                                     <%= listing.country %> <br>
                                         </p>
